<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.SignUpActivity">

    <ProgressBar
        android:id="@+id/register_user_progress"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/main_content_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textEmailReg"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_email"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_password"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/address_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top|left"
            android:hint="@string/address_street_hint"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/address_apt_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top|left"
            android:hint="@string/address_apt_number__hint"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top|left"
            android:hint="@string/address_city_hint"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/address_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="top|left"
            android:hint="@string/address_zipcode_hint"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/payment_details"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text="@string/payment"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/payment_selector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_filter"
                android:text="@string/payment_add_message"
                android:textSize="18sp" />

        </LinearLayout>


        <Button
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_style"
            android:paddingRight="2dp"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>