<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddCar">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:hint="@string/car_name_hint" />

        <EditText
            android:id="@+id/car_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:hint="@string/car_color_hint" />

        <EditText
            android:id="@+id/car_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_color"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:hint="@string/car_number_hint" />

        <EditText
            android:id="@+id/car_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_number"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:hint="@string/car_rate_hint" />

        <Spinner
            android:id="@+id/car_stations_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_rate">

        </Spinner>

        <Spinner
            android:id="@+id/car_models_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_stations_spinner">

        </Spinner>


        <Button
            android:id="@+id/save_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_models_spinner"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>