<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".payment.PrePayment">

    <TextView
        android:id="@+id/card_number_label"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:gravity="left|center"
        android:padding="10dp"
        android:text="@string/card_number"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_action_payment" />

        <EditText
            android:id="@+id/card_number_pre_payment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border"
            android:gravity="left|center"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exp_date_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/exp_date"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cvv_label"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="30dp"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/cvv"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/exp_month_pre_payment"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/default_month"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/exp_year_pre_payment"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/default_year"
            android:inputType="date"
            android:padding="0dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/cvv_pre_payment"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:gravity="left|center"
            android:padding="10dp"
            android:text="@string/zip_code"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/zip_code_pre_payment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border"
        android:gravity="left|center"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/save_card_details_pre_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_style"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>