<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".account.MyAccount">

    <LinearLayout
        android:id="@+id/name_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/name_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/name_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:textColor="@color/black"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/email_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_on_account"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/email_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/phone_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/phone_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/street_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/phone_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/street_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/street_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/apt_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/street_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/apt_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/apt_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/city_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/apt_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/city_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/city_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zip_on_my_account"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/city_on_my_account"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/zip_on_my_account"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/zip_on_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zip_on_my_account"
        android:layout_margin="10dp"
        android:background="@drawable/button_style"
        android:text="@string/edit"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>