<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carbooking.CarOptionsFilter">

    <LinearLayout
        android:id="@+id/station_details"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/station_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/car_stations_spinner_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_filter"></Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_picker_on_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/station_details"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/date_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/date_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_filter"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_time_details_on_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/date_picker_on_filter"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/start_time_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/start_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_filter"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_time_details_on_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/start_time_details_on_filter"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/end_time_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/end_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_filter"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vehicle_type_details_on_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/end_time_details_on_filter"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center"
            android:text="@string/vehicle_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/car_type_selector"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/button_filter"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/search_car"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/vehicle_type_details_on_filter"
        android:layout_margin="10dp"
        android:background="@drawable/button_style"
        android:text="@string/search_cars"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>